WIP update to Java 11